<resources>
    <string name="app_name">PolarisCoreAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Polaris Core</string>
    <string name="nav_header_subtitle">For android</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="iniciar">POLARIS CORE</string>
    <string name="iniciarSes">Iniciar sesión</string>
    <string name="correo">Correo de usuario</string>
    <string name="clave">Contraseña</string>
    <string name="action_settings">Settings</string>
    <string name="LoginHuella">Iniciar sesión mediante huella digital</string>
    <string name="Cambiar_pass">ACTUALIZAR CONTRASEÑA</string>
    <string name="rta">RESPUESTA</string>
    <string name="cambiar_clave">Actualizar</string>
    <string name="validar_rta">Verificar Respuestas</string>
    <string name="resp">VERIFICAR RESPUESTAS</string>
    <string name="Titulo_t">VERIFICAR RESPUESTAS</string>
    <string name="Respuesta1">Respuesta 1</string>
    <string name="Respuesta2">Respuesta 2</string>
    <string name="Respuesta3">Respuesta 3</string>
    <string name="titulo_spiner">Seleccione un repuesto</string>


    <string name="informacion_huella">Tenga en cuenta que cualquier huella registrada en este dispositivo podrá ser utilizada para acceder a la aplicación.</string>
    <string name="informacion2_huella">Puede desactivar esta opción en cualquier momento desde la aplicación, en el menú / Autenticación con huella</string>
    <string name="informacion3_huella">Ingresa su correo y la contraseña para habilitar el inicio de sesión por huella</string>


    <string-array name="preguntas">
        <item> NO SELECCION</item>
        <item>¿Cuál fue el nombre de tu primera mascota?</item>
        <item>¿Cuál es el nombre de tu primer profesor?</item>
        <item>¿Cuál fue tu primer número de teléfono?</item>
        <item>A donde viajaste por primera vez en avion?</item>
        <item>¿Cuál es el segundo apellido de tu primer novio(a)</item>
        <item>¿Como se llamaba tu mejor amigo de tu adolescencia</item>
        <item>Como se llamaba tu maestro favorito de la escuela</item>
        <item>¿Cuál fue la primera pelicula que viste en cine?</item>
        <item>¿Cuál fue la primera pelicula que viste en cine?</item>
        <item>¿Cual es tu personaje de la infancia favorito?</item>
    </string-array>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_stock">Stock</string>
    <string name="title_activity_productividad">Productividad</string>
    <string name="title_activity_terminales_reparadas">TerminalesReparadas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Formulario cambiar clave -->
    <string name="clave_actual">Contraseña actual</string>
    <string name="clave_nueva">Contraseña nueva</string>
    <string name="clave_confirmar">Confirmar contraseña</string>

    <!--LISTAR LAS OPCIONES DE CONSULTA-->
    <string-array name="opciones_consulta">
        <item>Diagnóstico</item>
        <item>Reparable</item>
    </string-array>


    <!--LISTA ES REPARABLE-->
    <string-array name="esReparable">
        <item>SI</item>
        <item>NO</item>
    </string-array>

    <!--FALLA DETECTADA-->
    <string-array name="falla_detectada">
        <item>Uso</item>
        <item>Fábrica</item>
    </string-array>

    <!--FALLA DETECTADA autorizadas-->
    <string-array name="falla_detectada_autorizadas">
        <item>Repuesto defectuoso</item>
        <item>Nuevo Diagnóstico</item>
    </string-array>

    <!--TIPOS DE ESTADOS DE LA TERMINAL-->
    <string-array name="estados">
        <item>Seleccione</item>
        <item>Diagnostico</item>
        <item>Reparadas</item>
    </string-array>

    <!--ENCABEZADO TABLA TIPIFICACIONES-->
    <string-array name="tabla_tipificaciones">
        <item>Id fila</item>
        <item>Nombre</item>
        <item>Eliminar</item>
    </string-array>

    <!--TIPOS DE BUSQUEDA DE PRODUCTIVIDAD-->
    <string-array name="tipo_busqueda">
        <item>Seleccione</item>
        <item>Dia</item>
        <item>Mes</item>
    </string-array>

    <string-array name="meses">
        <item>Seleccione</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>

    </string-array>


    <string-array name="años">
        <item>Seleccione</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
        <item>2051</item>
        <item>2052</item>
        <item>2053</item>
        <item>2054</item>
        <item>2055</item>
        <item>2056</item>
        <item>2057</item>
        <item>2058</item>
        <item>2059</item>
        <item>2060</item>
        <item>2061</item>
        <item>2062</item>
        <item>2063</item>
        <item>2064</item>
        <item>2065</item>
        <item>2066</item>
        <item>2067</item>
        <item>2068</item>
        <item>2069</item>
        <item>2070</item>
        <item>2071</item>
        <item>2072</item>
        <item>2073</item>
        <item>2074</item>
        <item>2075</item>
        <item>2076</item>
        <item>2077</item>
        <item>2078</item>
        <item>2079</item>
        <item>2080</item>
        <item>2081</item>
        <item>2082</item>
        <item>2083</item>
        <item>2084</item>
        <item>2085</item>
        <item>2086</item>
        <item>2087</item>
        <item>2088</item>
        <item>2089</item>
        <item>2090</item>
        <item>2091</item>
        <item>2092</item>
        <item>2093</item>
        <item>2094</item>
        <item>2095</item>
        <item>2096</item>
        <item>2097</item>
        <item>2098</item>
        <item>2099</item>
        <item>2100</item>


    </string-array>


    <string name="title_activity_tipificaciones_diagnostico">TipificacionesDiagnostico</string>
    <string name="bienvenido_seleccione_el_criterio_de_busqueda_en_que_desea_ver_su_productividad">Bienvenido, seleccione el criterio de busqueda en que desea ver su productividad</string>

</resources>
